# sdl-bits

./: .build.yml  .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  GNUmakefile  README.md  cbd.py  compose.yaml  config.lua  docker-build  docker-run  mappings.imp  meson.build  wasm.txt
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: ci.yml  cmake-windows.yml  cmake.yml  docker-image.yml  main.yml
assets/: CMakeLists.txt  generate.py
include/: bmp.h  macro.h  message_queue.h  prelude_sdl.h  prelude_stdlib.h
include/bmp/: bmp.h
include/macro/: macro.h
include/message_queue/: message_queue.h
include/msgq/: msgq.h
include/prelude/: prelude.h  prelude_lua.h  prelude_sdl.h  prelude_stdlib.h
lib/: CMakeLists.txt
lib/bmp/: CMakeLists.txt  bmp.c
lib/macro/: CMakeLists.txt
lib/message_queue/: CMakeLists.txt  compat.h  message_queue_posix.c  message_queue_sdl.c  shared.c  shared.h
lib/msgq/: CMakeLists.txt  compat.h  msgq.c  msgq_posix.c  msgq_pthread.c  msgq_sdl.c
lib/prelude/: CMakeLists.txt
misc/: pulseaudio.client.conf
src/: CMakeLists.txt  bmp.c  bmp.h  buffer.c  buffer.h  compat.h  font_loader.c  generate_atlas_from_bdf.c  generate_test_bmp.c  library_versions.c  macro.h  main.c  message_queue_posix.c  message_queue_sdl.c  message_queue_shared.c  msgq.c  msgq.h  prelude.h  queue.c  queue.h  util.c  util.h
test/: CMakeLists.txt  bmp_read_bitmap.c  bmp_read_bitmap_v4.c  buffer.c  buffer2d.c  load_bmp.c  message_queue_basic.c  message_queue_copies.c  msgq_basic.c  msgq_copies.c  produce_consume.c  read_bitmap.c  read_bitmap_v4.c  test.h  util-buffer-test.c  util_buffer.c  util_buffer2d.c  util_uint32_sat_sub.c
tool/: CMakeLists.txt  generate_atlas_from_bdf.c  generate_atlas_from_ttf.c  generate_test_bitmap.c  generate_test_bmp.c  get_displays.c  library_versions.c  render_bdf_font_to_file.c  render_font_to_file.c  render_test_bitmap.c  render_ttf_font_to_file.c
