# Executable: generate_test_bitmap
add_executable(generate_test_bitmap generate_test_bitmap.c)
target_compile_options_default(generate_test_bitmap)
target_link_libraries(generate_test_bitmap PRIVATE bmp)


# Executable: get_displays
add_executable(get_displays get_displays.c)
target_compile_options_default(get_displays)
target_link_SDL2(get_displays)


# Executable: library_versions
add_executable(library_versions library_versions.c)
target_compile_options_default(library_versions)
target_link_SDL2(library_versions)
target_link_SDL2_ttf(library_versions)
target_link_freetype(library_versions)


# Executable: render_bdf_font_to_file
add_executable(render_bdf_font_to_file render_bdf_font_to_file.c)
target_compile_options_default(render_bdf_font_to_file)
target_compile_definitions(render_bdf_font_to_file PRIVATE _CRT_SECURE_NO_WARNINGS)
target_link_libraries(render_bdf_font_to_file PRIVATE bmp)
target_link_freetype(render_bdf_font_to_file)
