add_library(bmp OBJECT bmp.c)
target_compile_options_default(bmp)
if(WIN32)
  target_compile_definitions(bmp PRIVATE _CRT_SECURE_NO_WARNINGS)
endif()
target_link_libraries(bmp PRIVATE macro)
if(UNIX)
  target_link_libraries(bmp PRIVATE m)
endif()
target_include_directories(bmp PUBLIC ${SDL_BITS_INCLUDE_DIR}/bmp)
