add_library(message_queue OBJECT message_queue_sdl.c)
target_compile_options_default(message_queue)
target_link_libraries(message_queue PRIVATE macro)
target_link_SDL2(message_queue PRIVATE)
target_include_directories(message_queue PUBLIC ${SDL_BITS_INCLUDE_DIR}/message_queue)

if (CMAKE_USE_PTHREADS_INIT AND HAVE_SEMAPHORE_H)
  add_library(message_queue_posix OBJECT message_queue_posix.c)
  target_compile_options_default(message_queue_posix)
  target_link_libraries(message_queue_posix PRIVATE macro)
  target_link_libraries(message_queue_posix PRIVATE Threads::Threads)
  target_include_directories(message_queue_posix PUBLIC ${SDL_BITS_INCLUDE_DIR}/message_queue)
endif()
