add_library(msgq OBJECT msgq_sdl.c)
target_compile_options_default(msgq)
target_link_libraries(msgq PRIVATE macro)
target_link_SDL2(msgq PRIVATE)
target_include_directories(msgq PUBLIC ${SDL_BITS_INCLUDE_DIR}/msgq)

if (CMAKE_USE_PTHREADS_INIT AND HAVE_SEMAPHORE_H)
  add_library(msgq_pthread OBJECT msgq_pthread.c)
  target_compile_options_default(msgq_pthread)
  target_link_libraries(msgq_pthread PRIVATE macro)
  target_link_libraries(msgq_pthread PRIVATE Threads::Threads)
  target_include_directories(msgq_pthread PUBLIC ${SDL_BITS_INCLUDE_DIR}/msgq)
endif()
